Skip to content

4.0 regression: Qt invalid cast

Just starting VLC...

../../modules/gui/qt/adapters/variables.hpp:134:28: runtime error: downcast of address 0x6190000a3030 which does not point to an object of type 'QVLCBool'
0x6190000a3030: note: object is of type 'QVLCVariable<QVLCBool, bool>'
 be be be be  f8 4e 2a 7b 41 7f 00 00  40 61 34 00 b0 60 00 00  70 02 05 00 20 60 00 00  90 f6 0e 00
              ^~~~~~~~~~~~~~~~~~~~~~~
              vptr for 'QVLCVariable<QVLCBool, bool>'
../../modules/gui/qt/adapters/variables.hpp:116:28: runtime error: downcast of address 0x6190000a3030 which does not point to an object of type 'QVLCBool'
0x6190000a3030: note: object is of type 'QVLCVariable<QVLCBool, bool>'
 be be be be  f8 4e 2a 7b 41 7f 00 00  40 61 34 00 b0 60 00 00  70 02 05 00 20 60 00 00  90 f6 0e 00
              ^~~~~~~~~~~~~~~~~~~~~~~
              vptr for 'QVLCVariable<QVLCBool, bool>'
Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information