qt: casting to children type in parent constructor is UB

Children object isn't built yet.

Fixes #22187

Signed-off-by: Thomas Guillem <thomas@gllm.fr>